welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:3: error: '=' expected but ';' found.
	for (x<- 0 to i-1) {
^